--- a/themes/glug/source/css/glug.scss
+++ b/themes/glug/source/css/glug.scss
@@ -99,11 +99,8 @@ a {
 #menu {
     width: 300px; //TODO
 }
-gluglink {
-    display: block;
-}
 
-.replaced_char {
-    opacity: 0.4;
+deleted {
+    opacity: 0.1;
 }
 
