--- a/themes/glug/layout/index.ejs
+++ b/themes/glug/layout/index.ejs
@@ -1,1 +1,4 @@
-<%- partial('_partial/archive', {pagination: 0}) %>
+<% page.posts.each(function(post){ %>
+    <%- partial('_partial/post', {post: post, index: true}) %>
+<% }) %>
+
