--- a/themes/glug/layout/layout.ejs
+++ b/themes/glug/layout/layout.ejs
@@ -29,7 +29,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
   <%- js('js/utilities.js') %>
   <%- js('js/erosion.js') %>
-  <%- partial('trackers') %>
+  <%- partial('_partial/trackers') %>
 
   <script type="text/javascript">
       jQuery(function(){
